figure fine-tuned

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -346,13 +346,13 @@ All data used in this study have been independently published and are accessible
 % \clearpage
 
   \begin{figure}[h!]
-    \caption{Three nested levels of uncertainty mean that an observed interaction matrix is unlikely to capture all of the interactions that can really occur at a site. Interaction uncertainty means that some inteactions that truly occur (black squares in True matrix) are less likely than others (grey squares) based on species traits. For example, lions are less likely to predate upon elephants than zebras. If our trait model is incomplete (e.g., if we neglect group hunting in lions), we might assume that elephants are too large to ever be prey for lions and assign this interaction a probability of 0.\\
+    \caption{Three nested levels of uncertainty mean that an observed interaction matrix is unlikely to capture all of the interactions that can really occur at a site. Interaction uncertainty means that some inteactions that truly occur (black squares in True matrix) are less likely than others (grey squares; lighter grey is less likely) based on species traits. For example, lions are less likely to predate upon elephants than zebras. If our trait model is incomplete (e.g., if we neglect group hunting in lions), we might assume that elephants are too large to ever be prey for lions and assign this interaction a probability of 0.\\
     Process uncertainty describes the fact that interactions occur with different probabilities during any given sample. We show six example networks representing interactions observed over two days at three sites. Interactions which occur during fewer sampling days are less likely to be observed.\\
     Detection uncertainty reflects the fact that not all interactions are equally detectable. For example, interactions involving cryptic species are less likely to be seen.\\
-    After applying these three layers of uncertainty, some interactions which truly occur are very unlikely to be observed. An observed matrix sampled based on this matrix (lower left) is thus likely to contain far fewer interactions than the original, true matrix.}
+    After applying these three layers of uncertainty, some interactions which truly occur are very unlikely to be observed. An observed matrix sampled based on this matrix (lower right) is thus likely to contain far fewer interactions than the original, true matrix.}
     \label{conceptual_fig}
     \begin{center}
-    % \includegraphics*[height=.5\textheight]{figures/conceptual_fig.eps}
+    \includegraphics*[height=.5\textheight]{figures/conceptual_fig.eps}
     \end{center}
     \end{figure}
 
