--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -127,7 +127,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
 \section*{Introduction}
 
-    Representing an ecological community as a network summarizes both species composition and interactions between species. A tabulation of the nodes (species) and their relative abundances forms the basis for traditional metrics of community composition such as alpha diversity. A network framework combines this tabulation of nodes with a list of interactions (links between nodes) so that networks provide additional, higher-order information on community structure. Despite this additional information, empirical descriptions of ecological networks are usually limited to static representations of the communities they describe. That is, whether the network is assembled based on aggregated data, a single intensive ``snapshot" sample, or expert knowledge, interactions are assumed to occur deterministically wherever and whenever the community is observed~\citep{Olesen2011a}. 
+    Representing an ecological community as a network summarises both species composition and interactions between species. A tabulation of the nodes (species) and their relative abundances forms the basis for traditional metrics of community composition such as alpha diversity. A network framework combines this tabulation of nodes with a list of interactions (links between nodes) so that networks provide additional, higher-order information on community structure. Despite this additional information, empirical descriptions of ecological networks are usually limited to static representations of the communities they describe. That is, whether the network is assembled based on aggregated data, a single intensive ``snapshot" sample, or expert knowledge, interactions are assumed to occur deterministically wherever and whenever the community is observed~\citep{Olesen2011a}. 
 
 
     The assumption of static communities contrasts with the known stochasticity of ecological communities~\citep{Gotelli2000}. Community composition and abundances vary over space~\citep{Baiser2012} and time~\citep{Olesen2011a}. Moreover, interactions vary over space~\citep{Kitching1987,Baiser2012}, time~\citep{Kitching1987,Olesen2011a}, and between individuals~\citep{Pires2011a,Fodrie2015,Novak2015}. Worse, variability in community composition and interactions may not be closely related. The removal of a species from a site will obviously also remove its interactions but, conversely, the co-occurrence of potentially interacting species does not guarantee that the species will interact at a given place and time. Interactions can be lost if the interaction partners remain present but are separated in time or are too rare to detect each other~\citep{Tylianakis2010}. Interactions can also fail to occur because of environmental contingencies~\citep{Poisot2015}, or because of individual preferences~\citep{Fodrie2015}. 
@@ -253,7 +253,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
       It is important to ensure that an informative prior accurately reflects the focal  system. For example, if the system is a large network containing many plant species and insects from different families, it is inappropriate to use a prior distribution drawn from a small network describing interactions between different genotypes of a single plant species and a set of closely-related insects. The similarity of traits across genotypes within a species means that an insect which interacts with one genotype is likely to interact with many others. Trait differences between species mean that a species-species network will likely contain fewer interactions than a genotype-species network. Similarly, highly-aggregated networks containing nodes which represent whole classes or families are likely to have very different structures than networks where most nodes represent single species as aggregated nodes are likely to have more interaction partners than single species.
 
 
-      The choice of prior will depend on the information available. In general, it is best to use a prior taken from a similar system as emphasized above. If such data are not available, a prior based on many networks with a similar level of resolution could be useful, as could a prior based on a preliminary round of sampling (analogous to ``training data"). If there is no suitable informative prior, it is best to use an explicitly uninformative prior. While an uninformative prior will not greatly reduce variance about $\lambda$, it does clearly state our lack of prior knowledge and will not bias our conclusions.
+      The choice of prior will depend on the information available. In general, it is best to use a prior taken from a similar system as emphasised above. If such data are not available, a prior based on many networks with a similar level of resolution could be useful, as could a prior based on a preliminary round of sampling (analogous to ``training data"). If there is no suitable informative prior, it is best to use an explicitly uninformative prior. While an uninformative prior will not greatly reduce variance about $\lambda$, it does clearly state our lack of prior knowledge and will not bias our conclusions.
 
 
   \subsection*{An empirical example}
@@ -261,7 +261,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
       To illustrate the process of constructing a Bayesian network, we use the well-sampled system of willows (\emph{Salix}), herbivorous gallers, and their natural enemies described by~\citet{Kopelke2017}. This dataset consists of a single community type sampled across Europe over 29 years and at 374 unique locations. The data were collected over 29 years at 374 unique locations across Europe. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 natural enemy nodes (see \emph{Appendix S3} for details). 
 
 
-      The high spatiotemporal resolution and unusally high sampling effort of this dataset make it well suited for illustrating the difficulties in completely sampling a network. To show the gaps in sampling, we compared the frequencies of observed co-occurrences and interactions. We analysed both the \emph{Salix}-galler and galler-natural enemy components of the network but, for brevity, present only the latter here (see~\emph{Appendix S4} for \emph{Salix}-galler results). 
+      The high spatiotemporal resolution and unusually high sampling effort of this dataset make it well suited for illustrating the difficulties in completely sampling a network. To show the gaps in sampling, we compared the frequencies of observed co-occurrences and interactions. We analysed both the \emph{Salix}-galler and galler-natural enemy components of the network but, for brevity, present only the latter here (see~\emph{Appendix S4} for \emph{Salix}-galler results). 
 
 
     \subsubsection*{Computing the prior and posterior distributions}
@@ -308,7 +308,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
   Our results also demonstrate how incomplete detection of interactions scales up to affect network structure. The structure of the well-sampled network used in our case study is most similar to the structure of simulated networks including only 50\% of the interactions suggested by the posterior distribution of interaction probabilities. If our descriptions of empirical systems are missing up to half of the feasible interactions, then it is vital to acknowledge this inherent uncertainty before comparing structures across systems or relating structure to stability.
 
 
-  Based on the framework described above, we can now offer some recommendations for improved descriptions of ecological interactions. First, sample sizes should be as large as possible in order to reduce detection uncertainty. Second, where sampling on the order of 30-50 observations per species pair is not possible (i.e., in most cases), researchers should acknowledge the varying levels of confidence surrounding interactions between different species pairs. Including the $n$ and $k$ values for each interaction will clearly indicate which unobserved interactions are most likely to be observed with further sampling and which estimates are more reliable. Third, the uncertainty around interactions should be incorporated in calculations of network properties. Re-sampling networks based on a probabilistic understanding of networks is straightforward and gives distributions for network properties rather than point estimates. This not only acknowledges the fact that interactions vary over time and space but will also facilitate comparisons between networks by adding confidence intervals to ezostimates of network properties. This will allow us to say whether networks have different structures \emph{and} whether those differences are greater than we would expect given the inherent variability of interactions. To facilitate the practical application of these recommendations, we provide all code used in this paper in the supplementary material. 
+  Based on the framework described above, we can now offer some recommendations for improved descriptions of ecological interactions. First, sample sizes should be as large as possible in order to reduce detection uncertainty. Second, where sampling on the order of 30-50 observations per species pair is not possible (i.e., in most cases), researchers should acknowledge the varying levels of confidence surrounding interactions between different species pairs. Including the $n$ and $k$ values for each interaction will clearly indicate which unobserved interactions are most likely to be observed with further sampling and which estimates are more reliable. Third, the uncertainty around interactions should be incorporated in calculations of network properties. Re-sampling networks based on a probabilistic understanding of networks is straightforward and gives distributions for network properties rather than point estimates. This not only acknowledges the fact that interactions vary over time and space but will also facilitate comparisons between networks by adding confidence intervals to estimates of network properties. This will allow us to say whether networks have different structures \emph{and} whether those differences are greater than we would expect given the inherent variability of interactions. To facilitate the practical application of these recommendations, we provide all code used in this paper in the supplementary material. 
 
 
 \section*{Acknowledgements}
@@ -346,7 +346,7 @@ All data used in this study have been independently published and are accessible
 % \clearpage
 
   \begin{figure}[h!]
-    \caption{Three nested levels of uncertainty mean that an observed interaction matrix is unlikely to capture all of the interactions that can really occur at a site. Interaction uncertainty means that some inteactions that truly occur (black squares in True matrix) are less likely than others (grey squares; lighter grey is less likely) based on species traits. For example, lions are less likely to predate upon elephants than zebras. If our trait model is incomplete (e.g., if we neglect group hunting in lions), we might assume that elephants are too large to ever be prey for lions and assign this interaction a probability of 0.\\
+    \caption{Three nested levels of uncertainty mean that an observed interaction matrix is unlikely to capture all of the interactions that can really occur at a site. Interaction uncertainty means that some interactions that truly occur (black squares in True matrix) are less likely than others (grey squares; lighter grey is less likely) based on species traits. For example, lions are less likely to predate upon elephants than zebras. If our trait model is incomplete (e.g., if we neglect group hunting in lions), we might assume that elephants are too large to ever be prey for lions and assign this interaction a probability of 0.\\
     Process uncertainty describes the fact that interactions occur with different probabilities during any given sample. We show six example networks representing interactions observed over two days at three sites. Interactions which occur during fewer sampling days are less likely to be observed.\\
     Detection uncertainty reflects the fact that not all interactions are equally detectable. For example, interactions involving cryptic species are less likely to be seen.\\
     After applying these three layers of uncertainty, some interactions which truly occur are very unlikely to be observed. The observed matrix (lower right) is a subsample of the true matrix, with the probability of observing each interaction depending on the interaction, process, and detection uncertainty associated with it. Note that some low-probability interactions (e.g., lion predation on zebra) are included while others (e.g., lion predation on elephants) are not.}
@@ -369,7 +369,7 @@ All data used in this study have been independently published and are accessible
 
 
   \begin{figure}[h!]
-    \caption{Imperfect detection of interactions increases the number of samples required to be confident that an interaction never occurs. Assume that two species cannot interact (i.e., $\lambda=0$) and that the number of observed interactions follows a binomial distribution. Here we show the upper bound (solid black line) of a 95\% Cloper-Pearson true credible interval for the interaction probability $\lambda$ for a pair of species that has been observed co-occurring $n$ times but never interacting ($k = 0$). The upper limit of the credible interval only reaches 0.1 (dashed, red line) with 35 observations. Thus, adding more observations is useful in controlling uncertainty, but the number of observations added must be very high. }
+    \caption{Imperfect detection of interactions increases the number of samples required to be confident that an interaction never occurs. Assume that two species cannot interact (i.e., $\lambda=0$) and that the number of observed interactions follows a binomial distribution. Here we show the upper bound (solid black line) of a 95\% Clopper-Pearson true credible interval for the interaction probability $\lambda$ for a pair of species that has been observed co-occurring $n$ times but never interacting ($k = 0$). The upper limit of the credible interval only reaches 0.1 (dashed, red line) with 35 observations. Thus, adding more observations is useful in controlling uncertainty, but the number of observations added must be very high. }
     \label{upper_limits}
     \begin{center}
     \includegraphics*[width=.8\textwidth]{figures/upper_limit_DG.eps}
@@ -379,7 +379,7 @@ All data used in this study have been independently published and are accessible
 
   \begin{figure}[h!]
     \caption{Using prior distributions based on a single site (Zillis in Graub\"{u}nden, Switzerland) from~\citet{Kopelke2017}, we calculate posterior distributions for the probability of interaction ($\lambda$) between two species that have not yet been observed interacting ($k = 0$). 
-    Posterior distributions (curves) and 95\% credible intervals (lines at top of panell) for $\lambda$ narrow and approach zero as the number of observed co-occurrences ($n$) increases. Diamonds indicate the maximum likelihood estimator for the mean probability of interaction.
+    Posterior distributions (curves) and 95\% credible intervals (lines at top of panel) for $\lambda$ narrow and approach zero as the number of observed co-occurrences ($n$) increases. Diamonds indicate the maximum likelihood estimator for the mean probability of interaction.
     Dashed lines indicate threshold probabilities of 0.01, 0.05, and 0.1. The number of samples required to obtain a 95\% credible interval below each threshold increases rapidly. It takes just over 20 observed co-occurrences to be 95\% confident that $\lambda<0.10$, approximately 50 co-occurrences to be 95\% confident that $\lambda<0.05$, and over 100 co-occurrences to be 95\% confident that $\lambda<0.01$.}
     \label{Salix_pdfs_cdfs}
     \begin{center}
