--- a/manuscript/coverletter.tex
+++ b/manuscript/coverletter.tex
@@ -47,10 +47,10 @@
 
 \opening{Dear Prof. Freckleton:}
 
-    My co-authors and I are pleased to submit the attached manuscript \emph{A quantitative framework for investigating the reliability of emprical network construction} for consideration as a research article in \textbf{Methods in Ecology and Evolution}. The goals of this manuscript are A) to illustrate the extreme difficulty in fully sampling the set of interactions occurring within a community, B) to demonstrate the construction of networks treating each interaction probabilistically (based on prior information as well as available data), and C) to offer concrete recommendations that will facilitate the use of this framework in future work.
+    My co-authors and I are pleased to submit the attached manuscript \emph{A quantitative framework for investigating the reliability of empirical network construction} for consideration as a research article in \textbf{Methods in Ecology and Evolution}. The goals of this manuscript are A) to illustrate the extreme difficulty in fully sampling the set of interactions occurring within a community, B) to demonstrate the construction of networks treating each interaction probabilistically (based on prior information as well as available data), and C) to offer concrete recommendations that will facilitate the use of this framework in future work.
 
 
-    We argue that, because of multiple levels of uncertainty surrounding interactions between species, the set of observed interactions will almost certainly be a subset of the interactions that can occur in a community. Some interactions may be rare because of species traits (e.g., prey that are only consumed by the largest individuals of a predator species), others may be difficult to detect because they occur under conditions not conducive to sampling (e.g., during inclement weather or at night), and yet other interactions may be common but very difficult to detect (e.g., interactions involving species that are highly cryptic). We emphasize that some of these sources of uncertainty can be reduced with increased sampling but that, because it is easier to observe species than interactions between species, increased sampling will tend to add more unobserved than observed interactions to a matrix. We illustrate the problem using an extensively-sampled, spatially-replicated \emph{Salix}-galler-natural enemy system (Kopelke \emph{et al.}, 2017. \textbf{Ecology} 98: 1730).
+    We argue that, because of multiple levels of uncertainty surrounding interactions between species, the set of observed interactions will almost certainly be a subset of the interactions that can occur in a community. Some interactions may be rare because of species traits (e.g., prey that are only consumed by the largest individuals of a predator species), others may be difficult to detect because they occur under conditions not conducive to sampling (e.g., during inclement weather or at night), and yet other interactions may be common but very difficult to detect (e.g., interactions involving species that are highly cryptic). We emphasise that some of these sources of uncertainty can be reduced with increased sampling but that, because it is easier to observe species than interactions between species, increased sampling will tend to add more unobserved than observed interactions to a matrix. We illustrate the problem using an extensively-sampled, spatially-replicated \emph{Salix}-galler-natural enemy system (Kopelke \emph{et al.}, 2017. \textbf{Ecology} 98: 1730).
 
 
     With extensive sampling being time- and resource-intensive and not a complete solution to the problems posed by interaction uncertainty, we suggest that researchers instead treat interactions probabilistically and incorporate prior information to set bounds on the probability of interaction between species that were not observed interacting. As mentioned above, a lack of observed interaction could have several causes and does not necessarily imply that the interaction truly does not occur. We demonstrate a simple Bayesian framework, including the selection of a prior distribution, and use it to predict the likely set of feasible interactions in our example \emph{Salix} system. Based on this framework, we close with a set of recommendations for both empiricists and theoreticians that should improve our ability to deal with the uncertainty inherent in ecological networks and compare networks across systems.
